k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-app
spec:
  selector:
    matchLabels:
      app: user-app
  replicas: 2
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: user-app
    spec:
      containers:
        - image: nailkabirov/arch-hw2:v0.0.2
          name: user-app
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /ready
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
