k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-app
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
